--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
    <title>Everyday with Isa</title>
  </head>
  <body>
+
+   <!--Title-->
+
    	<a href='#contact'><img
     src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/profile.jpg"
     alt="The author" /></a>
     <h3>by Isabelle Rodriguez | 1 day ago</h3>
+
+    <!--Guide-->
 
     <h1>An Insider's Guide to NYFW</h1>
    	<img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/image-one.jpeg"
@@ -17,6 +22,9 @@
       never been. Luckily, I'm here to give you an insider's guide and make your
       first show a pleasurable experience. By taking my tips and tricks, and
       following your gut, you'll have an unforgettable experience!</p>
+
+      <!--Tickets and Shows-->
+
     <h2>Getting Tickets & Picking the Shows</h2>
    	<img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/image-two.jpeg"
     alt="" />
@@ -27,6 +35,9 @@
      blowing your cash the whole time you won't have fun. Then check out prices,
      days, and times and prioritize the designers you want to see most. Lastly,
      purchase your tickets and get excited!</p>
+
+     <!--Dressing-->
+
    <h2>Dressing for the Shows</h2>
    <img src="https://s3.amazonaws.com/codecademy-content/courses/learn-html/elements-and-structure/image-three.jpeg"
   alt="" />
@@ -36,6 +47,9 @@
     through their new lines. Also it's important to wear shoes you'll be
     comfortable in all day. Obviously you want to look good, but you'll be on
     your feet all day long, so be prepared.</p>
+
+    <!--Related Content-->
+
    <h4>Related Content</h4>
    	<ul>
       <li>How To Style Boyfriend Jeans</li>
@@ -43,6 +57,9 @@
       <li>The Overalls Trend</li>
       <li>Fall's It Color: Blush</li>
    </ul>
+
+   <!--Contact-->
+
    <div id='contact'>
      <p><strong>email:</strong> isa@fashionblog.com | <strong>phone:</strong>
      917-555-1098 | <strong>address:</strong> 371 284th St, New York, NY,
